<resources>
    <string name="app_name">Geo Quiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="download">DOWNLOAD IMAGE</string>
    <string name="signn">SIGN IN</string>
    <string name="share">Share app</string>
    <string name="moreapps">More apps</string>
    <string name="logout">Logout</string>
    <string name="accept">ACCEPT</string>
    <string name="special">Special</string>
    <string name="rentals">Special unlimited online Rentals</string>
    <string name="ipsum1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus.</string>
    <string name="ipsum2">Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est."</string>
</resources>
