<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/geoquizground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus."
            android:id="@+id/textView"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0"
        android:layout_gravity="center_horizontal">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnShareApp"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="0dp"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            fancy:fb_borderColor="#37d60d"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#0f5b00"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_fontIconResource="&#xf04b;"
            fancy:fb_iconPosition = "right"
            fancy:fb_text="@string/share"
            fancy:fb_textColor="#FFFFFF" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnMoreApps"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            fancy:fb_borderColor="#37d60d"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#0f5b00"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_iconPosition = "right"
            fancy:fb_fontIconResource="&#xf04b;"
            fancy:fb_text="@string/moreapps"
            fancy:fb_textColor="#FFFFFF" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            fancy:fb_borderColor="#37d60d"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#0f5b00"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_iconPosition = "right"
            fancy:fb_fontIconResource="&#xf04b;"
            fancy:fb_text="@string/logout"
            fancy:fb_textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>